--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "cmp": "node create_components.js"
+    "cmp": "node create_components.js",
+    "start-server": "node simple_api/server.js"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
